--- a/CreditManageSystemPro/Web.config
+++ b/CreditManageSystemPro/Web.config
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="CreditManageContext" connectionString="Data Source=.;initial catalog=CreditManage;uid=sa;pwd=123;" providerName="System.Data.SqlClient" />
-    <!--<add name="CreditManageContext" connectionString="Data Source=.;initial catalog=CreditManage;uid=sa;pwd=lxhx1234;" providerName="System.Data.SqlClient" />-->
+    <add name="CreditManageContext" connectionString="Data Source=.;initial catalog=CreditManage;uid=sa;pwd=lxhx1234;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
