--- a/CreditManageSystemPro.Admin/CreditManageSystemPro.Admin.csproj
+++ b/CreditManageSystemPro.Admin/CreditManageSystemPro.Admin.csproj
@@ -335,7 +335,9 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\Index.cshtml" />
@@ -396,7 +398,9 @@
     <Content Include="Views\Loan\LoanReviewDetail.cshtml" />
     <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\Role\Add.cshtml" />
     <Content Include="Views\Privilege\Add.cshtml" />
     <Content Include="Views\Menu\Update.cshtml" />
